A missing comma in ruby-2-0-by-example.

--- a/site/2013/02/24/ruby-2-0-by-example.html.haml
+++ b/site/2013/02/24/ruby-2-0-by-example.html.haml
@@ -70,7 +70,7 @@ css_class: "with-margin"
 :captionedruby
   def accepts_nested_attributes_for(*attr_names,
     allow_destroy: false,
-    update_only: false
+    update_only: false,
     reject_if: nil,
     limit: nil
   )
