--- a/site/index.atom.erb
+++ b/site/index.atom.erb
@@ -1,25 +1,21 @@
----
-layout: nil
----
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <id>http://benhoskin.gs/</id>
   <title>benhoskin.gs</title>
   <link href="http://benhoskin.gs" rel="alternate"/>
   <link href="http://benhoskin.gs/index.atom" rel="self"/>
-  <updated>{{ site.time | date_to_xmlschema }}</updated>
+  <updated><%= date_of(published_posts.first).xmlschema %></updated>
   <author>
     <name>Ben Hoskings</name>
     <email>ben@hoskings.net</email>
     <uri>http://benhoskin.gs</uri>
   </author>
-{% for post in site.posts limit:30 %}
+<% published_posts[0...30].each do |post| %>
   <entry>
-    <title>{{ post.title }}</title>
-    <link href="http://benhoskin.gs{{ post.url }}"/>
-    <updated>{{ post.date | date_to_xmlschema }}</updated>
-    <id>http://benhoskin.gs{{ post.id }}</id>
-    <content type="html">{{ post.content | xml_escape }}</content>
+    <title><%= post.title.encode(:xml => :text) %></title>
+    <link href="http://benhoskin.gs/<%= href(post) %>" />
+    <updated><%= date_of(post).xmlschema %></updated>
+    <id>/<%= href(post) %></id>
   </entry>
-{% endfor %}
+<% end %>
 </feed>
